Fix #indicator z-index

--- a/style/index.css
+++ b/style/index.css
@@ -482,6 +482,7 @@ header, #edit, #scoring, #find, #progress {
     background: rgba(0, 130, 240, .2);
     border: 2px solid #0082F0;
     border-radius: 5px;
+    z-index: 3;
 }
 
 #info, #score, #preferences {
